<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- DataBinding 变量可以在这里定义 -->
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="#F5F7FA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp">

            <!-- Header Section with Gradient -->
            <RelativeLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:background="@drawable/bg_gradient_header"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:fitsSystemWindows="true">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_device_type"
                    android:textColor="#E0FFFFFF"
                    android:textSize="13sp"
                    android:layout_below="@id/tv_title"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"/>
            </RelativeLayout>

            <!-- Content Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:layout_marginTop="-15dp">

                <!-- Integrated Device Card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_machine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp"
                        android:background="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_device_integrated"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="64dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/uart_device"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:gravity="center"
                                android:textStyle="bold"
                                android:layout_marginBottom="8dp"/>
                        </LinearLayout>



                        <Button
                            android:id="@+id/btn_machine"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:background="@drawable/bg_button_selector_modern"
                            android:text="@string/serial_device"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:visibility="gone"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:elevation="2dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Bluetooth Device Card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/card_ble"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="24dp"
                        android:background="@color/white">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_marginBottom="10dp">
                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_device_bluetooth"
                                android:layout_marginBottom="16dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="64dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/bluetooth_device"
                                android:textColor="@color/black"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:gravity="center"
                                android:layout_marginBottom="8dp"/>
                        </LinearLayout>


                        <Button
                            android:id="@+id/btn_ble"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:background="@drawable/bg_button_selector_modern"
                            android:text="@string/ble_device"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:visibility="gone"
                            android:textStyle="bold"
                            android:elevation="2dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>

